--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -11,11 +11,12 @@
   </thead>
 
   <tbody>
-    <% @topics.each do |topic| %>
+    <% @topics.sort_by {|topic| -topic.votes.count }.each do |topic| %>
       <tr>
         <td><%= link_to topic.title, topic %></td>
         <td><%= pluralize(topic.votes.count, "vote") %></td>
         <td><%= button_to '+1', upvote_topic_path(topic), method: :post %></td>
+        <td><%= button_to '-1', devote_topic_path(topic), method: :post %></td>
         <td><%= link_to 'delete', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
