--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -5,8 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>Title</th>
-      <th colspan="100">Manage</th>
+      <th><%= t("title") %></th>
+      <th colspan="100"><%= t("Manage<") %>/th>
     </tr>
   </thead>
 
@@ -17,7 +17,7 @@
         <td><%= pluralize(topic.votes.count, "vote") %></td>
         <td><%= button_to '+1', upvote_topic_path(topic), method: :post %></td>
         <td><%= button_to '-1', devote_topic_path(topic), method: :post %></td>
-        <td><%= link_to 'delete', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to <%= t("delete") %>, topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,3 +26,6 @@
 <br>
 
 <%= link_to 'New Topic', new_topic_path %>
+<%= link_to <%= t("about") %>, about_path %>
+<%= link_to "中文版", :controller => controller_name, :action => action_name, :locale => "zh-CN" %>
+<%= link_to "English", :controller => controller_name, :action => action_name, :locale => "en" %>
